--- a/app/src/main/res/layout/fragment_set_list.xml
+++ b/app/src/main/res/layout/fragment_set_list.xml
@@ -14,7 +14,7 @@
             android:id="@+id/set_progress_bar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:mutableVisibility="@{viewModel.getLoadingVisibility()}"
+            app:mutableVisibility="@{viewModel.loadingVisibility}"
             android:indeterminate="true"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -25,7 +25,7 @@
             android:id="@+id/set_list"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            app:adapter="@{viewModel.getSetListAdapter()}"
+            app:adapter="@{viewModel.setListAdapter}"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
