Improved load image cache

--- a/app/src/main/res/layout/fragment_card_list.xml
+++ b/app/src/main/res/layout/fragment_card_list.xml
@@ -33,7 +33,9 @@
                 android:id="@+id/card_list"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:adapter="@{viewModel.cardListAdapter}" />
+                app:adapter="@{viewModel.cardListAdapter}"
+                app:drawingCacheEnabled="@{true}"
+                app:itemViewCacheSize="@{25}" />
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
