--- a/app/src/main/res/layout/fragment_card_list.xml
+++ b/app/src/main/res/layout/fragment_card_list.xml
@@ -4,7 +4,7 @@
     <data>
         <variable
             name="viewModel"
-            type="me.alejandro.mtgspoileralert.ui.cardList.CardListViewModel" />
+            type="me.alejandro.mtgspoileralert.ui.cardList.CardListAndroidViewModel" />
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
