--- a/app/src/main/res/menu/settings.xml
+++ b/app/src/main/res/menu/settings.xml
@@ -4,6 +4,6 @@
     <item
         android:id="@+id/action_settings"
         android:icon="@drawable/ic_settings_white_24dp"
-        android:title="Settings"
+        android:title="@string/menu_settings"
         app:showAsAction="always|collapseActionView" />
 </menu>
