--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -22,7 +22,11 @@
         tools:layout="@layout/fragment_set_list">
         <action
             android:id="@+id/action_nav_setsFragment_to_cardsFragment"
-            app:destination="@id/cardsFragment">
+            app:destination="@id/cardsFragment"
+            app:enterAnim="@anim/fragment_open_enter"
+            app:exitAnim="@anim/fragment_close_exit"
+            app:popEnterAnim="@anim/fragment_open_enter"
+            app:popExitAnim="@anim/fragment_close_exit">
 
         </action>
     </fragment>
@@ -42,6 +46,10 @@
         android:label="Settings" />
     <action
         android:id="@+id/action_open_settingsFragment"
-        app:destination="@id/settingsFragment" />
+        app:destination="@id/settingsFragment"
+        app:enterAnim="@anim/fragment_open_enter"
+        app:exitAnim="@anim/fragment_close_exit"
+        app:popEnterAnim="@anim/fragment_open_enter"
+        app:popExitAnim="@anim/fragment_close_exit" />
 
 </navigation>
