--- a/app/src/main/res/drawable/actionbar_background.xml
+++ b/app/src/main/res/drawable/actionbar_background.xml
@@ -10,8 +10,8 @@
         android:topRightRadius="0dp" />
     <gradient
         android:angle="0"
-        android:endColor="@color/colorAccent"
-        android:startColor="@color/colorPrimary"
+        android:endColor="@color/colorPrimary"
+        android:startColor="@color/colorPrimaryDark"
         android:type="linear" />
 
 </shape>
