--- a/app/src/main/res/layout/item_set.xml
+++ b/app/src/main/res/layout/item_set.xml
@@ -31,7 +31,7 @@
                 android:id="@+id/set_title"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:textColor="@color/colorPrimaryDark"
+                android:textColor="@color/colorAccent"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
