--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#7159F4</color>
-    <color name="colorPrimaryDark">#2C1D7E</color>
-    <color name="colorAccent">#3ABED6</color>
+    <color name="colorPrimary">#7986CB</color>
+    <color name="colorPrimaryDark">#49599a</color>
+    <color name="colorAccent">#65499c</color>
 </resources>
