--- a/app/src/main/res/drawable/ic_app_logo.xml
+++ b/app/src/main/res/drawable/ic_app_logo.xml
@@ -1,24 +1,32 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="300dp"
-    android:height="300dp"
+    android:width="50dp"
+    android:height="50dp"
     android:viewportWidth="500"
     android:viewportHeight="500">
-  <path
-      android:fillColor="#FFFFFF"
-      android:pathData="M452.9,500H47.1C21.1,500 0,478.9 0,452.9V47.1C0,21.1 21.1,0 47.1,0h405.9c26,0 47.1,21.1 47.1,47.1v405.9C500,478.9 478.9,500 452.9,500z" />
-  <path
-      android:fillColor="#7986CB"
-      android:pathData="M80.7,206.2L49,232.8c-6.8,5.7 -7.7,15.9 -2,22.7l91.3,108.9L80.7,206.2z" />
-  <path
-      android:fillColor="#7986CB"
-      android:pathData="M144.6,131.4l-50.5,18.4c-9.7,3.5 -14.8,14.4 -11.2,24.1l61.9,170.1L144.6,131.4z" />
-  <path
-      android:fillColor="#49599A"
-      android:pathData="M376.3,175.6c-33.1,0 -59.8,-26.8 -59.8,-59.8c0,-6.6 1.1,-12.9 3,-18.8H178.5c-11.9,0 -21.5,9.6 -21.5,21.5v289c0,11.9 9.6,21.5 21.5,21.5h181c11.9,0 21.5,-9.6 21.5,-21.5V175.4C379.4,175.5 377.9,175.6 376.3,175.6zM204.1,301.3c0.3,-0.2 0.5,-0.4 0.8,-0.6c0.6,-0.5 1.1,-0.9 1.5,-1.4c0,0 0,0 0,0c0.2,-0.1 0.4,-0.3 0.5,-0.5c0.3,-0.3 0.6,-0.6 0.8,-0.9c0,0 0,0 0.1,0c0.3,-0.4 0.6,-0.8 0.9,-1.2c0.3,-0.4 0.5,-0.7 0.5,-0.7h0c3,-4.3 5.6,-10 8.4,-17.7c1.5,-4.2 5.1,-20.1 8.9,-20.9c3,-0.7 6,2.8 8,4.4c-1.4,9.3 -10.7,20.8 -8.9,30.2c0.8,4.1 7.2,3.7 4.9,8.9c-6.6,-0.7 -17.4,-1 -21.3,3.6l-2.1,1.1C206,304.3 205,302.8 204.1,301.3zM285.1,296.7c-5.8,4.3 -12.4,7.8 -15.6,14.7c-2.5,-0.6 -4.2,-2.1 -6.2,-3.1c1.5,-10.4 -2.9,-25.7 -6.7,-35.1c-3.7,-9.2 -8.8,-18.5 -15.6,-22.7c-3.3,1.3 -2,5.5 -4.9,6.7c-2.9,1.2 -6.5,-1.8 -8.9,-4c0.9,-6.1 4.5,-9.4 4.4,-16.5c-1.5,-2.6 -5.9,-2.4 -8.5,-4c0.5,-2.5 2.1,-3.9 3.6,-5.3c8.9,-0.3 16.5,0.7 25.4,0.4c4.9,11.1 11,21 17.8,30.2c3.3,-5.7 10.6,-4 12.5,1.8c-1,3.7 -3.5,5.7 -4,9.3C277.1,278.9 284.2,288.1 285.1,296.7zM268.6,338.3c-24.5,0 -46.2,-11.8 -59.9,-29.9c1.1,-0.8 1.6,-1 1.6,-1c4.8,-1.9 9.9,-3.4 16.9,-3.1c11.8,11.2 27.2,18.7 47.6,16.9c11.5,-1 21,-6 28,-11.1c2.6,-1.9 5.2,-5.1 7.6,-5.8c4.8,-1.5 11.5,1.3 15.6,1.3l3.4,1.5C315.9,325.9 293.7,338.3 268.6,338.3zM332.1,303.1l-1.3,-0.6l-1.5,-0.2c-9.5,-4.2 -24,-1 -30.7,3.7c-0.6,-2 -3,-2.4 -3.1,-4.9c2.6,-4.1 8.4,-5.5 9.3,-10.2c1.1,-5.4 -3.7,-12.6 -6.2,-18.2c-3,-6.6 -5,-13.2 -8.5,-16.5c-4,2 -9.6,-0.6 -10.2,-5.8c1.8,-4.6 8.3,-8 7.6,-12.9c-0.7,-4.2 -7.1,-3.8 -9.8,-7.1c0.8,-2.2 1.8,-4.1 4,-4.9c7.3,4 18.7,-1.4 24.5,2.2c-1.6,16.2 6,24.9 12,38.3c2,4.4 4.1,9.7 5.8,14.7c1.6,4.5 3.5,10 5.9,12.9c0,0 0,0 0,0l2.1,1.7l3.2,2.6C334.1,299.6 333.2,301.4 332.1,303.1zM333.9,295.4c0,0 0.1,0 0.1,0C333.8,295.6 333.8,295.6 333.9,295.4zM338.1,291.2l-0.4,-0.2l-4.7,-3.2c-1.1,-0.9 -2.3,-1.9 -3,-3.2c-0.7,-1.4 -1.1,-4 -1.8,-6.2c-0.7,-2.1 -2,-4.7 -2.2,-6.2c-0.6,-5.1 0.8,-10.3 0.4,-15.1c-2.2,-27.6 -25.1,-49.7 -52,-51.6c-22.1,-1.6 -36.3,6.5 -46.7,16.9c-10.2,10.2 -18.8,26.5 -16.9,47.1c0.3,3 1.6,5.9 1.3,8.9c-0.6,6.8 -5.8,11.9 -8.9,17.3l-1.6,1.1c-5,-10.1 -7.9,-21.4 -7.9,-33.4c0,-41.3 33.5,-74.8 74.8,-74.8c41.3,0 74.8,33.5 74.8,74.8C343.4,273.3 341.5,282.6 338.1,291.2z" />
-  <path
-      android:fillColor="#7986CB"
-      android:pathData="M376.3,115.8m-47.7,0a47.7,47.7 0,1 1,95.4 0a47.7,47.7 0,1 1,-95.4 0" />
-  <path
-      android:fillColor="#EC1C24"
-      android:pathData="M273,506.7L273,506.7c-0.1,0.1 -0.2,0.2 -0.3,0.4C272.9,506.8 273,506.7 273,506.7z" />
+    <path
+        android:fillColor="#49599A"
+        android:pathData="M452.9,500H47.1C21.1,500 0,478.9 0,452.9V47.1C0,21.1 21.1,0 47.1,0h405.9c26,0 47.1,21.1 47.1,47.1v405.9C500,478.9 478.9,500 452.9,500z" />
+    <path
+        android:fillAlpha="0.15"
+        android:fillColor="#FF000000"
+        android:pathData="M250,500H47.1C21.1,500 0,478.9 0,452.9V47.1C0,21.1 21.1,0 47.1,0H250V500z"
+        android:strokeAlpha="0.15" />
+    <path
+        android:fillColor="#EC1C24"
+        android:pathData="M273,505.7L273,505.7c-0.1,0.1 -0.2,0.2 -0.3,0.4C272.9,505.8 273,505.7 273,505.7z" />
+    <path
+        android:fillColor="#EC1C24"
+        android:pathData="M269.5,514.9" />
+    <path
+        android:fillColor="#FFFFFF"
+        android:pathData="M80.7,206.2L49,232.8c-6.8,5.7 -7.7,15.9 -2,22.7l91.3,108.9L80.7,206.2z" />
+    <path
+        android:fillColor="#FFFFFF"
+        android:pathData="M144.6,131.4l-50.5,18.4c-9.7,3.5 -14.8,14.4 -11.2,24.1l61.9,170.1L144.6,131.4z" />
+    <path
+        android:fillColor="#FFFFFF"
+        android:pathData="M376.3,175.6c-33.1,0 -59.8,-26.8 -59.8,-59.8c0,-6.6 1.1,-12.9 3,-18.8H178.5c-11.9,0 -21.5,9.6 -21.5,21.5v289c0,11.9 9.6,21.5 21.5,21.5h181c11.9,0 21.5,-9.6 21.5,-21.5V175.4C379.4,175.5 377.9,175.6 376.3,175.6zM204.1,301.3c0.3,-0.2 0.5,-0.4 0.8,-0.6c0.6,-0.5 1.1,-0.9 1.5,-1.4c0,0 0,0 0,0c0.2,-0.1 0.4,-0.3 0.5,-0.5c0.3,-0.3 0.6,-0.6 0.8,-0.9c0,0 0,0 0.1,0c0.3,-0.4 0.6,-0.8 0.9,-1.2c0.3,-0.4 0.5,-0.7 0.5,-0.7h0c3,-4.3 5.6,-10 8.4,-17.7c1.5,-4.2 5.1,-20.1 8.9,-20.9c3,-0.7 6,2.8 8,4.4c-1.4,9.3 -10.7,20.8 -8.9,30.2c0.8,4.1 7.2,3.7 4.9,8.9c-6.6,-0.7 -17.4,-1 -21.3,3.6l-2.1,1.1C206,304.3 205,302.8 204.1,301.3zM285.1,296.7c-5.8,4.3 -12.4,7.8 -15.6,14.7c-2.5,-0.6 -4.2,-2.1 -6.2,-3.1c1.5,-10.4 -2.9,-25.7 -6.7,-35.1c-3.7,-9.2 -8.8,-18.5 -15.6,-22.7c-3.3,1.3 -2,5.5 -4.9,6.7c-2.9,1.2 -6.5,-1.8 -8.9,-4c0.9,-6.1 4.5,-9.4 4.4,-16.5c-1.5,-2.6 -5.9,-2.4 -8.5,-4c0.5,-2.5 2.1,-3.9 3.6,-5.3c8.9,-0.3 16.5,0.7 25.4,0.4c4.9,11.1 11,21 17.8,30.2c3.3,-5.7 10.6,-4 12.5,1.8c-1,3.7 -3.5,5.7 -4,9.3C277.1,278.9 284.2,288.1 285.1,296.7zM268.6,338.3c-24.5,0 -46.2,-11.8 -59.9,-29.9c1.1,-0.8 1.6,-1 1.6,-1c4.8,-1.9 9.9,-3.4 16.9,-3.1c11.8,11.2 27.2,18.7 47.6,16.9c11.5,-1 21,-6 28,-11.1c2.6,-1.9 5.2,-5.1 7.6,-5.8c4.8,-1.5 11.5,1.3 15.6,1.3l3.4,1.5C315.9,325.9 293.7,338.3 268.6,338.3zM332.1,303.1l-1.3,-0.6l-1.5,-0.2c-9.5,-4.2 -24,-1 -30.7,3.7c-0.6,-2 -3,-2.4 -3.1,-4.9c2.6,-4.1 8.4,-5.5 9.3,-10.2c1.1,-5.4 -3.7,-12.6 -6.2,-18.2c-3,-6.6 -5,-13.2 -8.5,-16.5c-4,2 -9.6,-0.6 -10.2,-5.8c1.8,-4.6 8.3,-8 7.6,-12.9c-0.7,-4.2 -7.1,-3.8 -9.8,-7.1c0.8,-2.2 1.8,-4.1 4,-4.9c7.3,4 18.7,-1.4 24.5,2.2c-1.6,16.2 6,24.9 12,38.3c2,4.4 4.1,9.7 5.8,14.7c1.6,4.5 3.5,10 5.9,12.9l0,0l2.1,1.7l3.2,2.6C334.1,299.6 333.2,301.4 332.1,303.1zM333.9,295.4c0,0 0.1,0 0.1,0C333.8,295.6 333.8,295.6 333.9,295.4zM338.1,291.2l-0.4,-0.2l-4.7,-3.2c-1.1,-0.9 -2.3,-1.9 -3,-3.2c-0.7,-1.4 -1.1,-4 -1.8,-6.2c-0.7,-2.1 -2,-4.7 -2.2,-6.2c-0.6,-5.1 0.8,-10.3 0.4,-15.1c-2.2,-27.6 -25.1,-49.7 -52,-51.6c-22.1,-1.6 -36.3,6.5 -46.7,16.9c-10.2,10.2 -18.8,26.5 -16.9,47.1c0.3,3 1.6,5.9 1.3,8.9c-0.6,6.8 -5.8,11.9 -8.9,17.3l-1.6,1.1c-5,-10.1 -7.9,-21.4 -7.9,-33.4c0,-41.3 33.5,-74.8 74.8,-74.8c41.3,0 74.8,33.5 74.8,74.8C343.4,273.3 341.5,282.6 338.1,291.2z" />
+    <path
+        android:fillColor="#FFFFFF"
+        android:pathData="M376.3,115.8m-47.7,0a47.7,47.7 0,1 1,95.4 0a47.7,47.7 0,1 1,-95.4 0" />
 </vector>
