--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -9,6 +9,6 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_app_logo" />
+            android:src="@drawable/ic_app_logo_splash" />
     </LinearLayout>
 </layout>
